--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "joi": "^17.2.1",
+    "morgan": "^1.10.0",
+    "sequelize": "^6.3.4",
+    "sqlite3": "^5.0.0"
   }
 }
