--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,11 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.3.4",
     "sqlite3": "^5.0.0"
