--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@mdi/font": "^3.6.95",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-youtube": "^1.4.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
