--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "vue-router": "^3.2.0",
     "vue-youtube": "^1.4.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
